--- a/back_end/templates/ticket.html
+++ b/back_end/templates/ticket.html
@@ -52,14 +52,14 @@
               <nav class="navbar navbar-inverse">
                 <a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
 							 <div class="container-fluid">
-								 <div class="navbar-header">
+<!-- 								 <div class="navbar-header">
 									 <a class="navbar-brand" href="/ticket">Buy a Ticket</a>
-								 </div>
+								 </div> -->
 								 <ul class="nav navbar-nav">
 									 <!-- <li class="active"><a href="/">Home</a></li> -->
-									 <li><a href="/">Home</a></li>
-									 <li><a href="/review">Leave a Review</a></li>
-									 <!-- <li><a href="#">Page 3</a></li> -->
+									<li><a href="/">Home</a></li>
+									<li><a href="/review">Leave a Review</a></li>
+									<li class="active"><a href="/ticket">Buy a Ticket</a></li>
 								 </ul>
 							 </div>
 						 </nav>
