more ui changes

--- a/back_end/templates/movieticket.html
+++ b/back_end/templates/movieticket.html
@@ -49,7 +49,7 @@
           </div>
 
 
-          <div class="inner cover">
+          <div class="inner-cover">
             <h2 align ="center" class="cover-heading">Billing Information</h2>
             <br><br>
           <form action="/action_page.html" align = "left">
