--- a/back_end/templates/review.html
+++ b/back_end/templates/review.html
@@ -62,9 +62,7 @@
               <nav class="navbar navbar-inverse">
 								<a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
 							 <div class="container-fluid">
-<!-- 								 <div class="navbar-header"> -->
-<!-- 									 <a class="navbar-brand" href="/review">Leave a Review</a>
-								 </div> -->
+
 								 <ul class="nav navbar-nav">
 									 <li><a href="/">Home</a></li>
 									 <li class="active"><a href="/">Leave a Review</a></li>
@@ -103,7 +101,7 @@
 	 </div>
 	 <br><br>
               <div>
- 				<button type="button" class="btn btn-primary" id="subMov"> Submit Review </button>
+ 				<button type="button" class="btn btn-primary" id="submitBt"> Submit Review </button>
               </div>
             </form>
 						<p id='returnMessage'>
