--- a/back_end/templates/ticket.html
+++ b/back_end/templates/ticket.html
@@ -52,9 +52,7 @@
               <nav class="navbar navbar-inverse">
                 <a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
 							 <div class="container-fluid">
-<!-- 								 <div class="navbar-header">
-									 <a class="navbar-brand" href="/ticket">Buy a Ticket</a>
-								 </div> -->
+
 								 <ul class="nav navbar-nav">
 									 <!-- <li class="active"><a href="/">Home</a></li> -->
 									<li><a href="/">Home</a></li>
@@ -64,22 +62,8 @@
 							 </div>
 						 </nav>
             </div>
-          </div>
-					<form>
-					 <!--Search Bar with drop down menu-->
-					 <!-- <div class="input-append">
-						 <input type="text" id="mySearch" class="form-control" placeholder="Search" required/>
-						 <select class="form-control">
-						  <option value="movie">Movie</option>
-						   <option value="director">Director</option>
-						  <option value="actor">Actor/Actress</option>
-						</select>
-						<button id="searchBt" class="btn btn-lg btn-default">Search</button>
-					 </div> -->
 
-				 </form>
-
-          <div class="inner cover">
+          <div class="inner-cover">
             <h2 class="cover-heading">What Movie Would You Like to See?</h2>
 
             <p class="lead">
