--- a/back_end/templates/Movie.html
+++ b/back_end/templates/Movie.html
@@ -83,9 +83,6 @@
 							<nav class="navbar navbar-inverse">
 								<a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
 							<div class="container-fluid">
-<!-- 								<div class="navbar-header">
-									<a class="navbar-brand" href="/">Home</a>
-								</div> -->
 
 								<ul class="nav navbar-nav">
 									<li class="active"><a href="/">Home</a></li>
@@ -100,8 +97,8 @@
         <div style="width:690px;height:650px;overflow:auto;padding:5px;">
 
 		<div class="bigDiv">
-          <div class="inner cover">
-            <h3 class="cover-heading">Search Potatoes Database</h2>
+          <div class="inner-cover">
+            <h2 class="cover-heading">Search Potatoes Database</h2>
             	<br>
 						<form>
 						 <!--Search Bar with drop down menu-->
@@ -114,7 +111,7 @@
 							  <option value="actor">Actor/Actress</option>
 							</select>
 							<br>
-							<button type="button" class="btn btn-primary" id="subMov">Search</button>
+							<button type="button" class="btn btn-primary" id="searchBt">Search</button>
 						 </div>
 					 </form>
 
@@ -209,7 +206,7 @@
           <div class="mastfoot">
 
             <div class="inner">
-              <p><!--Fresh potatoes-->
+              <p><!-- Fresh potatoes -->
 
               </p>
             </div>
