--- a/back_end/templates/manLogin.html
+++ b/back_end/templates/manLogin.html
@@ -59,12 +59,12 @@
               <a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
               <div class="container-fluid">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="/review">Leave a Review</a>
                 </div>
                 <ul class="nav navbar-nav">
-                  <!-- <li class="active"><a href="/">Home</a></li> -->
                   <li><a href="/">Home</a></li>
+                  <li><a href="/review">Leave a Review</a></li>
                   <li><a href="/ticket">Buy a Ticket</a></li>
+                  <li class="active"><a href="/manLogin">Manager Login</a></li>
                   <!-- <li><a href="#">Page 3</a></li> -->
                 </ul>
               </div>
@@ -83,7 +83,9 @@
               <form class="form-signin" id="managerForm">
                 <h2 class="form-signin-heading">Please login</h2>
                 <input type="text" class="form-control" id="username" placeholder="Email Address" required="" autofocus="" />
+                <br><br>
                 <input type="password" class="form-control" id="password" placeholder="Password" required=""/>
+                <br><br>
                 <button id="login" class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
               </form>
             </div>
