--- a/back_end/templates/Movie.html
+++ b/back_end/templates/Movie.html
@@ -37,7 +37,7 @@
 									$("#description").append(data[2][0]['avg(rating)'] + "/5 Potatoes");
 									$("#topper").append("<th>Actors: </th>");
 									console.log("Daddy's Home 2".replace(/ /g, ''))
-									var picture = "/" + data[0][0]['name'].replace(/ /g, '') + '.jpg'
+									var picture = "/templates/pictures/" + data[0][0]['name'].replace(/ /g, '') + '.jpg'
 									console.log(picture)
 									$("#pic").append('<img src="' + picture +'" width="100" height="100">')
 									for (i = 0; i < data[1].length; i++){
