--- a/back_end/templates/manLogin.html
+++ b/back_end/templates/manLogin.html
@@ -138,7 +138,7 @@
             </div>
             <div class="wrapper" id="manager" hidden>
               <h2>Admin View: Select Movie to Audit Reviews For</h2>
-              <div class="input-append">
+              <div class="input_append">
                 <select class="form-control" id="reviewOpts"></select>
                 <!-- Table to put search results in -->
      					 <div class="scrollable">
