--- a/back_end/templates/movieticket.html
+++ b/back_end/templates/movieticket.html
@@ -56,15 +56,8 @@
 							</div>
 						</nav>
             </div>
-          </div>
-
-
-
-
-
-					<div class="scrollable">
+          <div style="width:690px;height:650px;overflow:auto;padding:5px;">
           <div class="inner-cover" id="insertTab">
-
             <h2 align ="center" class="cover-heading">Billing Information</h2>
             <br><br>
           <form align = "left">
@@ -115,8 +108,6 @@
             <br><br>
             <button type="button" class="btn btn-primary" id="subMov"> Submit</button>
           </div>
-				</div>
-
           <div class="mastfoot">
             <!--<div class="inner">
               <p>Fresh potatoes
