--- a/back_end/templates/Movie.html
+++ b/back_end/templates/Movie.html
@@ -92,7 +92,7 @@
 									<li class="active"><a href="/">Home</a></li>
 									<li><a href="/review">Leave a Review</a></li>
 									<li><a href="/ticket">Buy a Ticket</a></li>
-									<li><a href="/manLogin">Manager Login</a></li>
+									<li><a href="/manLogin">Moderator Login</a></li>
 									<!-- <li><a href="#">Page 3</a></li> -->
 								</ul>
 							</div>
