--- a/back_end/templates/manLogin.html
+++ b/back_end/templates/manLogin.html
@@ -113,7 +113,7 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/review">Leave a Review</a></li>
                   <li><a href="/ticket">Buy a Ticket</a></li>
-                  <li class="active"><a href="/manLogin">Manager Login</a></li>
+                  <li class="active"><a href="/manLogin">Moderator Login</a></li>
                   <!-- <li><a href="#">Page 3</a></li> -->
                 </ul>
               </div>
