--- a/back_end/templates/movieticket.html
+++ b/back_end/templates/movieticket.html
@@ -52,7 +52,7 @@
 									<li><a href="/">Home</a></li>
                   <li><a href="/review">Leave a Review</a></li>
                   <li><a href="/ticket">Buy a Ticket</a></li>
-                  <li><a href="/manLogin">Manager Login</a></li>
+                  <li><a href="/manLogin">Moderator Login</a></li>
 								</ul>
 							</div>
 						</nav>
